# fiduciary-evals

./: .env.example  .gitignore  README.md  paper.md  pyproject.toml
docs/: methodology.md
evals/: __init__.py  grader.py  invariants.py  prompts.py  runner.py
results/: claude-3-5-sonnet.json  claude-opus-4.5.json  claude-sonnet-4.json  gemini-2.0-flash-exp.json  gemini-2.0-flash.json  gemini-3-pro.json  gpt-4o-latest.json  gpt-4o.json  gpt-5.2-pro.json  gpt-5.2.json  o1.json
